// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAddress 1`] = `"Read Only Mode"`;

exports[`addAddress 2`] = `
Array [
  Array [
    "addr1",
    "addr2",
    1,
  ],
]
`;

exports[`addCustodian 1`] = `"Read Only Mode"`;

exports[`addCustodian 2`] = `
Array [
  Array [
    "custodianAddr",
  ],
]
`;

exports[`addOtherContracts 1`] = `"Read Only Mode"`;

exports[`addOtherContracts 2`] = `
Array [
  Array [
    "otherContractAddr",
  ],
]
`;

exports[`getCandidate 1`] = `"candidatre"`;

exports[`getContractAddr 1`] = `"custodianAddr1"`;

exports[`getContractAddr 2`] = `"custodianAddr2"`;

exports[`getContractAddr 3`] = `"custodianAddr3"`;

exports[`getContractAddr 4`] = `"otherAddr1"`;

exports[`getContractAddr 5`] = `"otherAddr2"`;

exports[`getContractAddr 6`] = `"otherAddr3"`;

exports[`getContractSize 1`] = `3`;

exports[`getContractSize 2`] = `3`;

exports[`getModerator 1`] = `"moderator"`;

exports[`getPoolAddr 1`] = `"hotAddr1"`;

exports[`getPoolAddr 2`] = `"hotAddr2"`;

exports[`getPoolAddr 3`] = `"hotAddr3"`;

exports[`getPoolAddr 4`] = `"coldAddr1"`;

exports[`getPoolAddr 5`] = `"coldAddr2"`;

exports[`getPoolAddr 6`] = `"coldAddr3"`;

exports[`getPoolSize 1`] = `3`;

exports[`getPoolSize 2`] = `3`;

exports[`getStates 1`] = `
Object {
  "isStarted": true,
  "lastOperationTime": 100000,
  "operationCoolDown": 100000,
  "poolSizes": Object {
    "cold": 3,
    "custodian": 3,
    "hot": 3,
    "otherContract": 3,
  },
  "votingStage": "Moderator",
}
`;

exports[`removeAddress 1`] = `"Read Only Mode"`;

exports[`removeAddress 2`] = `
Array [
  Array [
    "addr",
    1,
  ],
]
`;

exports[`startContractVoting 1`] = `"Read Only Mode"`;

exports[`startContractVoting 2`] = `
Array [
  Array [
    "candidateAdddr",
  ],
]
`;

exports[`startManager 1`] = `"Read Only Mode"`;

exports[`startModeratorVoting 1`] = `"Read Only Mode"`;

exports[`terminateByTimeout 1`] = `"Read Only Mode"`;

exports[`terminateContractVoting 1`] = `"Read Only Mode"`;

exports[`vote 1`] = `"Read Only Mode"`;

exports[`vote 2`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
]
`;

exports[`voteStartTimestamp 1`] = `
Object {
  "started": 123456789000,
  "totalVoters": "3",
  "votedAgainst": "5",
  "votedFor": "10",
}
`;
